# penguin

./: .gitignore  .gitmodules  README.md
app/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  todo  vite.config.ts
app/src/: App.css  App.tsx  chess.ts  index.css  socket.ts
app/src/modules/: Game.tsx  Home.tsx
app/src/stores/: dragAndDrop.ts  gameState.ts
app/src/ui/: Board.tsx  Button.tsx  Modal.tsx  Piece.tsx  PlayerInfo.tsx  PromotionPiece.tsx  PromotionWindow.tsx  _Board.tsx
backend/: README.md
backend/dev/: .clang-format  .gitignore  CMakeLists.txt  index2.html  notes.md  run.sh  todo
backend/dev/src/: http.cpp  http.h  main.cpp  network.h  server.cpp  server.h  utils.cpp  utils.h  websocket.cpp  websocket.h
backend/dev/src/trie/: trie.cpp  trie.h
backend/prod/: .gitignore  requirements.txt  run.py
backend/prod/instance/: config.dev.toml  config.test.toml
backend/prod/src/: __init__.py  core.py  game.py  http.py  limit.py  loggers.py  todo  utils.py
backend/prod/src/tests/: pytest.ini  test_core.py  test_game.py  test_limiters.py
hieu-chess/: Cargo.toml  perft.sh
hieu-chess/hieu-chess-lib/: Cargo.toml
hieu-chess/hieu-chess-lib/src/: board.rs  chess.rs  constants.rs  error.rs  lib.rs  move_gen.rs  piece.rs  square.rs  utils.rs
hieu-chess/hieu-chess-wasm/: Cargo.toml
hieu-chess/hieu-chess-wasm/src/: lib.rs
