[package]
name = "hieu-chess"
version = "0.1.0"
edition = "2021"
description = "a simple chess library that handles move generations, move validation, board representation and piece placements"
authors = ["Hieu <hieunguyen.0527@gmail.com>"]
license = "MIT"

[dependencies]
serde = "1.0.205"
thiserror = "1.0.63"
